--- a/src/app/componentes/chat/chat.component.css
+++ b/src/app/componentes/chat/chat.component.css
@@ -1,31 +1,60 @@
 .chatcontainer{
 padding: 30px;
 width: 100%;
-height: 60vh;
-min-height: 100%;
+height: auto;
 display: flex;
 flex-direction: column;
 padding-bottom: 70px;
 background-color: ghostwhite;
 }
+.card-body{
+height: 60vh;
+overflow-y: auto;
+}
+.card{
+    margin-top: 20px;
+}
+
+.container{
+    background-color: black;
+    width: 100%;
+    max-width: 500px;
+}
 
 .local{
-padding: 20px;
-border-radius: 20px;
+padding: 10px;
+border-radius: 10px;
 background-color: darkcyan;
 max-width: 80%;
 color: white;
-font-size: 17px;
+font-size: 12px;
 align-self: flex-end;
+
 }
+
+.spanl{
+font-size: 4;
+color: gray;
+align-self: flex-end;
+
+list-style: none;
+}
+.spanr{
+   text-align: center;
+    font-size: 4;
+    color: gray;
+    align-self: flex-start;
+    list-style: none;
+    }
 
 .remote{
 
-    padding: 20px;
-    border-radius: 20px;
+    padding: 10px;
+    border-radius: 10px;
     background-color: darkorchid;
     max-width: 80%;
     color: white;
-    font-size: 17px;
+    font-size: 12px;
     align-self: flex-start;
+   
 }
