modernizacion del chat y homepage

--- a/src/app/componentes/index/index.component.html
+++ b/src/app/componentes/index/index.component.html
@@ -1,1 +1,79 @@
-<p>index works!</p>
+<div id="carouselExampleFade" class="carousel slide carousel-fade">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="{{path}}img/banner1.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="{{path}}img/baner2.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="{{path}}img/banner3.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <section class="info">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h6 class="card-title text-success">¿Qué es la depresión?</h6>
+                    </div>
+                    <div class="card-body">
+                        <p>La depresión es más que tan solo sentirse triste o tener un mal día. Cuando la tristeza dura bastante tiempo e interfiere con las actividades normales diarias, usted podría estar deprimido. Los síntomas de la depresión incluyen los siguientes:</p>
+                        <ul>
+                            <li>Sentirse triste o ansioso con frecuencia o todo el tiempo.</li>
+                            <li>No querer realizar actividades que antes eran divertidas.</li>
+                            <li>Sentirse irritable, frustrado con facilidad o intranquilo.</li>
+                            <li>Tener dificultad para dormirse o seguir durmiendo.</li>
+                            <li>Levantarse muy temprano o dormir demasiado.</li>
+                            <li>Comer más o menos de lo usual o no tener apetito.</li>
+                            <li>Tener malestar, dolores, dolores de cabeza o problemas estomacales que no se mejoran con tratamiento.</li>
+                            <li>Tener dificultad para concentrarse, recordar detalles o tomar decisiones.</li>
+                            <li>Sentirse cansado, aun después de dormir bien.</li>
+                            <li>Sentirte culpable, que no vale nada o desamparado.</li>
+                            <li class="text-danger">Pensar en el suicidio o en hacerse daño.</li>
+                        </ul>
+                        <p>La siguiente información no pretende proporcionar un diagnóstico médico de depresión grave y no puede usarse en lugar de consultar a un profesional de la salud mental. Si usted cree que está deprimido, hable con su médico o un profesional de salud mental inmediatamente. Esto es especialmente importante si sus síntomas empeoran o están afectando sus actividades diarias.</p>
+                    </div>
+                    <div class="card-footer">
+                        <h6 class="card-title text-success">Estamos para ayudarte</h6>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h6 class="card-title text-success">¿Qué es la ansiedad?</h6>
+                    </div>
+                    <div class="card-body">
+                        <p>Sentir ansiedad de modo ocasional es una parte normal de la vida. Sin embargo, las personas con trastornos de ansiedad con frecuencia tienen preocupaciones y miedos intensos, excesivos y persistentes sobre situaciones diarias. Con frecuencia, en los trastornos de ansiedad se dan episodios repetidos de sentimientos repentinos de ansiedad intensa y miedo o terror que alcanzan un máximo en una cuestión de minutos (ataques de pánico).<br><br>
+
+                            Estos sentimientos de ansiedad y pánico interfieren con las actividades diarias, son difíciles de controlar, son desproporcionados en comparación con el peligro real y pueden durar un largo tiempo. Con el propósito de prevenir estos sentimientos, puede suceder que evites ciertos lugares o situaciones. Los síntomas pueden empezar en la infancia o la adolescencia y continuar hasta la edad adulta. <br><br>
+                            
+                            Algunos ejemplos del trastorno de ansiedad son: trastorno de ansiedad generalizada, trastorno de ansiedad social (fobia social), fobias específicas y trastorno de ansiedad por separación. Puedes tener más de un trastorno de ansiedad. A veces, la ansiedad surge de una enfermedad que requiere tratamiento. <br><br>
+                        
+                            Cualquiera sea el tipo de ansiedad que padezcas, un tratamiento puede ayudar.</p>
+                    </div>
+                    <div class="card-footer">
+                        <h6 class="card-title text-success">Estamos para ayudarte</h6>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+  </section>
+
