--- a/src/app/componentes/chat/chat.component.css
+++ b/src/app/componentes/chat/chat.component.css
@@ -1,22 +1,28 @@
 .chatcontainer{
-padding: 30px;
+padding: 10px;
 width: 100%;
 height: auto;
 display: flex;
 flex-direction: column;
-padding-bottom: 70px;
-background-color: ghostwhite;
+border-radius: 10px;
+background-color: rgba(248,248,255,0.7);
+box-shadow: 2px 2px 2px rgb(182, 182, 182);
 }
 .card-body{
 height: 60vh;
 overflow-y: auto;
+background-image: url("http://54.174.81.71/Chat/assets/img/chat.jpg");
+background-size: cover;
+background-position:center;
+
 }
 .card{
-    margin-top: 20px;
+    margin: 20px;
+    box-shadow: 2px 2px 2px #ccc;
 }
 
 .container{
-    background-color: black;
+   
     width: 100%;
     max-width: 500px;
 }
